--- a/templates/newsletter/index.html.twig
+++ b/templates/newsletter/index.html.twig
@@ -4,14 +4,14 @@
 
 {% block body %}
     <h1>Newsletter index</h1>
-
+    <h2>{{ toto }}</h2>
     <table class="table">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Nom</th>
                 <th>Email</th>
-                <th>Date_inscription</th>
+                <th>DateInscription</th>
                 <th>actions</th>
             </tr>
         </thead>
