--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -1,7 +1,18 @@
 {% extends 'parent.html.twig' %}
 {% block titre1 %}
-<h1>Accueil</h1>
-<h2> Bonjour <h2>
+<h1>Des idées débordantes</h1>
+
+{{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button class="btn">{{ button_label|default('Save') }}</button>
+    <div class="{{ classConfirmation ?? 'gris' }}">{{ messageConfirmation ?? "texte par défaut" }}</div>
+{{ form_end(form) }}
+
+
+
 {% endblock %}
 
 
+{% block titre2 %}
+            <h1>au coeur de vos projets </h1>
+            {% endblock %}
