--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -8,7 +8,7 @@
     <div class="{{ classConfirmation ?? 'gris' }}">{{ messageConfirmation ?? "texte par défaut" }}</div>
 {{ form_end(form) }}
 
-
+{# {{ include('newsletter/_form.html.twig') }} #}
 
 {% endblock %}
 
