--- a/templates/parent.html.twig
+++ b/templates/parent.html.twig
@@ -17,7 +17,7 @@
             <a href="{{ path('index') }}">Accueil</a>
             <a href="{{ path('galerie') }}">Galerie</a>
             <a href="{{ path('contact') }}">Contact</a>
-            <a href="{{ path('realisation') }}">Réalisations</a>
+            {# <a href="{{ path('realisation') }}">Réalisations</a> #}
         </nav>
     </header>
     <main>
