--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,13 +9,18 @@
 
     <h1>Register</h1>
 
+    <hr>        
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.username) }}
+        {{ form_row(registrationForm.email) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'mot de passe'
         }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
+        {{ form_row(registrationForm.agreeTerms, {
+            label: "j'accepte les conditions"
+        }) }}
+        <button type="submit" class="btn btn-primary">Créez votre compte</button>
     {{ form_end(registrationForm) }}
+    <hr>        
+
 {% endblock %}
