--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,7 +16,16 @@
         
     </head>
     <body>
+        <header class="container">
+            <nav>
+                <a href="{{ path('annonce_index') }}">annonces</a>
+                <a href="{{ path('categorie_index') }}">catégories</a>
+                <a href="{{ path('index') }}">accueil</a>
+                <a href="{{ path('app_logout') }}">déconnexion</a>
+            </nav>
+        </header>
         <div class="container">
+
             {% block body %}{% endblock %}
         </div>
 
