--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,9 +18,13 @@
     <body>
         <header class="container">
             <nav>
+                <a href="{{ path('index') }}">accueil</a>
+        {% if is_granted('ROLE_ADMIN') %}
                 <a href="{{ path('annonce_index') }}">annonces</a>
                 <a href="{{ path('categorie_index') }}">catégories</a>
-                <a href="{{ path('index') }}">accueil</a>
+        {% elseif is_granted('ROLE_USER') %}
+                <a href="{{ path('membre') }}">espace membre</a>
+        {% endif %}
                 <a href="{{ path('app_logout') }}">déconnexion</a>
             </nav>
         </header>
