--- a/templates/site/annonce.html .twig
+++ b/templates/site/annonce.html .twig
@@ -2,22 +2,26 @@
 
 {% block titre1 %}
 <h1>Liste des annonces</h1>
+{% endblock %}
 
-<div>
-    {% for annonce in annonces %}
-        <article>
-            <div>{{ annonce.id }}</div>
-            <h3>{{ annonce.titre }}</h3>
-            <div>{{ annonce.slug }}</div>
-            <p>{{ annonce.contenu }}</p>
-            <div>{{ annonce.image }}</div>
-            <div>{{ annonce.datePublication ? annonce.datePublication|date('Y-m-d H:i:s') : '' }}</div>
-        </article>
-    {% else %}
-        <article>
-            <div>aucune annonce n'est publiée</div>
-        </article>
-    {% endfor %}
+{% block annonces %}
+<section class="container">
+    <div class="annonces">
+        {% for annonce in annonces %}
+            <article>
+                <div>{{ annonce.id }}</div>
+                <h3>{{ annonce.titre }}</h3>
+                <div>{{ annonce.slug }}</div>
+                <p>{{ annonce.contenu }}</p>
+                <div>{{ annonce.image }}</div>
+                <div>{{ annonce.datePublication ? annonce.datePublication|date('Y-m-d H:i:s') : '' }}</div>
+            </article>
+        {% else %}
+            <article>
+                <div>aucune annonce n'est publiée</div>
+            </article>
+        {% endfor %}
 
-</div>
+    </div>
+</section>
 {% endblock %}
