--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,26 +1,40 @@
-h1 {
-    color:#ec000b;
+html, body {
+    width:100%;
+    padding:0;
+    margin:0;
+    font-size:16px;
+}
+* {
+    box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    width:100%;
-    text-align: center;
-    padding:1rem;
+h1 {
+    color:rgb(255, 0, 200);
 }
+
 img {
     width:100%;
-    /* max-height: 40vh; */
-    max-height: 300px;
+    max-height: 40vh;
     object-fit: cover;
 }
 
-nav a {
-    display: inline-block;
-    text-decoration: none;
-    padding:1rem;
+.gris {
+    background-color: #cccccc;
 }
 
-section {
+.vert {
+    background-color: lightgreen;
+}
+
+.annonces {
     display: flex;
     flex-wrap: wrap;
+    width:100%;
+}
+
+.annonces article {
+    background-color: #dddddd;
+    padding:1rem;
+    margin:0.5rem;
+    width: calc( 100% / 3 - 1rem);  /* on enleve 2x margin */
 }
