--- a/templates/site/annonce.html .twig
+++ b/templates/site/annonce.html .twig
@@ -1,26 +1,20 @@
 {% extends 'parent.html.twig' %}
 
 {% block titre1 %}
-<h1>Liste des annonces</h1>
+<h1>Une seule annonce</h1>
 {% endblock %}
 
 {% block annonces %}
 <section class="container">
     <div class="annonces">
-        {% for annonce in annonces %}
+        
             <article>
-                <div>{{ annonce.id }}</div>
-                <h3>{{ annonce.titre }}</h3>
-                <div>{{ annonce.slug }}</div>
-                <p>{{ annonce.contenu }}</p>
-                <div>{{ annonce.image }}</div>
-                <div>{{ annonce.datePublication ? annonce.datePublication|date('Y-m-d H:i:s') : '' }}</div>
-            </article>
-        {% else %}
-            <article>
-                <div>aucune annonce n'est publiée</div>
-            </article>
-        {% endfor %}
+            <h3><a href="{{ path('annonce', {'slug': annonce.slug, 'id': annonce.id}) }}">{{ annonce.titre }}</a></h3>
+            <div>publié par {{ annonce.user.username }}</div>
+            <p>{{ annonce.contenu }}</p>
+            <div>{{ annonce.image }}</div>
+            <div>{{ annonce.datePublication ? annonce.datePublication|date('d-m-Y H:i') : '' }}</div>
+        </article>
 
     </div>
 </section>
