--- a/templates/membre/index.html.twig
+++ b/templates/membre/index.html.twig
@@ -16,7 +16,37 @@
             <div>{{ messageConfirmation }}</div>
         {{ form_end(form) }}
     </section>
-<section>
-        <h3>liste des vos annonces</h3>
+
+    <section class="container">
+        <div class="annonces row">
+            {% for annonce in annonces %}
+                <article class="col-sm-4 mb-3">
+                    <h3><a href="{{ path('annonce', {'slug': annonce.slug, 'id': annonce.id}) }}">{{ annonce.titre }}</a></h3>
+                    <div>publié par {{ annonce.user.username }}</div>
+                    <p>{{ annonce.contenu }}</p>
+                    {% if annonce.image %}
+                        <div><img src="{{ asset('uploads/' ~ annonce.image) }}" class="img-fluid"></div>
+                    {% else %}
+                        <div>(pas d'image)</div>
+                    {% endif %}
+                    <div>{{ annonce.datePublication ? annonce.datePublication|date('d/m/Y à H:i') : '' }}</div>
+                    <div>
+                        <a class="btn btn-success" href="{{ path('membre_annonce_edit', {'id': annonce.id}) }}">Modifier</a>
+                    </div>
+                    <div>
+                        <form method="post" action="{{ path('membre_annonce_delete', {'id': annonce.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                            <input type="hidden" name="_method" value="DELETE">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ annonce.id) }}">
+                            <button class="btn btn-danger">Supprimer</button>
+                        </form>
+                    </div>
+                </article>
+            {% else %}
+                <article>
+                    <div>aucune annonce n'est publiée</div>
+                </article>
+            {% endfor %}
+
+        </div>
     </section>
 {% endblock %}
