--- a/templates/site/annonce.html .twig
+++ b/templates/site/annonce.html .twig
@@ -12,7 +12,9 @@
             <h3><a href="{{ path('annonce', {'slug': annonce.slug, 'id': annonce.id}) }}">{{ annonce.titre }}</a></h3>
             <div>publié par {{ annonce.user.username }}</div>
             <p>{{ annonce.contenu }}</p>
-            <div>{{ annonce.image }}</div>
+            {% if annonce.image %}
+                <div><img src="{{ asset('uploads/' ~ annonce.image) }}" class="img-fluid"></div>
+            {% endif %}
             <div>{{ annonce.datePublication ? annonce.datePublication|date('d-m-Y H:i') : '' }}</div>
         </article>
 
